# a2a-mcp-hello-py

./: .env  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  agent_executor.py  mcp_client.py  server.py
